tests/ui/impl-trait/hidden-lifetimes.stderr
error[E0700]: hidden type for `impl Swap + 'a` captures lifetime that does not appear in bounds
  --> $DIR/hidden-lifetimes.rs:29:5
   |
LL | fn hide_ref<'a, 'b, T: 'static>(x: &'a mut &'b T) -> impl Swap + 'a {
   |                 --                                   -------------- opaque type defined here
   |                 |
   |                 hidden type `&'a mut &'b T` captures the lifetime `'b` as defined here
LL |     x
   |     ^
   |
help: to declare that `impl Swap + 'a` captures `'b`, you can add an explicit `'b` lifetime bound
   |
LL | fn hide_ref<'a, 'b, T: 'static>(x: &'a mut &'b T) -> impl Swap + 'a + 'b {
   |                                                                     ++++

error[E0700]: hidden type for `impl Swap + 'a` captures lifetime that does not appear in bounds
  --> $DIR/hidden-lifetimes.rs:46:5
   |
LL | fn hide_rc_refcell<'a, 'b: 'a, T: 'static>(x: Rc<RefCell<&'b T>>) -> impl Swap + 'a {
   |                        --                                            -------------- opaque type defined here
   |                        |
   |                        hidden type `Rc<RefCell<&'b T>>` captures the lifetime `'b` as defined here
LL |     x
   |     ^
   |
help: to declare that `impl Swap + 'a` captures `'b`, you can add an explicit `'b` lifetime bound
   |
LL | fn hide_rc_refcell<'a, 'b: 'a, T: 'static>(x: Rc<RefCell<&'b T>>) -> impl Swap + 'a + 'b {
   |                                                                                     ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0700`.
